# tbamud

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  ChangeLog  FAQ  LICENSE.md  README  README.md  THIRD-PARTY-LICENSES.md  autorun  autorun.amiga  autorun.cmd  autorun.pl  autorun.sh  changelog  configure  macrun.pl  power_curve.ipynb  vms_autorun.com
.github/workflows/: build.yml  codeql.yml
cnf/: acconfig.h  aclocal.m4  configure.in
doc/: FAQ  FAQ.txt  ProtocolSystem.txt  README  README.AMIGA  README.ARC  README.BORLAND  README.BSD  README.CMAKE.md  README.CYGWIN  README.MSVC2022  README.MSVC4  README.MSVC5  README.MSVC6  README.MSVC8  README.OS2  README.UNIX  README.VMS  README.WATCOM  README.WIN  UnixShellAdminGuide.odt  act.txt  admin.txt  building.txt  coding.txt  color.txt  debugging.txt  dg_events.txt  files.txt  license.txt  msgedit.txt  porting.txt  releases.txt  socials.txt  syserr.txt  testing.md  utils.txt
lib/: README
lib/etc/: badsites  hcontrol  time
lib/house/: README
lib/misc/: bugs  ideas  messages  messages.json  socials  socials.new  typos  xnames
lib/mudmail/: index
lib/mudmail/0/: 0.ml
lib/plrfiles/P-T/: 00
lib/plrobjs/: purgedir  purgeobjs  searchfor
lib/scripts/: README.md  sample_echo.py  sample_fountain.py  sample_patrol.py
lib/text/: background  contexthelp  credits  greetings  handbook  immlist  imotd  info  motd  news  policies  wizlist
lib/text/hedit/: README
lib/text/help/: README  commands.hlp  help.hlp  ihelp  index  index.mini  iscreen  screen  socials.hlp
lib/text/help/oldhelp/: index  info.hlp  spells.hlp  wizhelp.hlp
lib/world/mob/: 0.mob  1.mob  1.toml  100.mob  101.mob  103.mob  104.mob  106.mob  107.mob  11.mob  115.mob  117.mob  118.mob  12.mob  120.mob  125.mob  13.mob  130.mob  140.mob  15.mob  150.mob  16.mob  169.mob  17.mob  175.mob  18.mob  186.mob  187.mob  19.mob  2.mob  20.mob  200.mob  201.mob  211.mob  22.mob  220.mob  232.mob  233.mob  234.mob  235.mob  (+131 more)
lib/world/qst/: 0.qst  1.qst  index
lib/world/rsv/: 1.toml
lib/world/shp/: 0.shp  1.shp  104.shp  106.shp  107.shp  117.shp  118.shp  12.shp  120.shp  125.shp  13.shp  140.shp  150.shp  16.shp  175.shp  2.shp  200.shp  201.shp  211.shp  232.shp  234.shp  236.shp  239.shp  240.shp  241.shp  242.shp  243.shp  248.shp  249.shp  25.shp  251.shp  256.shp  257.shp  261.shp  27.shp  271.shp  272.shp  274.shp  275.shp  277.shp  (+37 more)
lib/world/trg/: 0.toml  0.trg  1.toml  1.trg  103.trg  104.trg  106.trg  107.trg  11.trg  115.trg  117.trg  118.trg  12.trg  120.trg  125.trg  13.trg  130.trg  14.trg  140.trg  15.trg  150.trg  16.trg  17.trg  175.trg  187.trg  19.trg  2.trg  200.trg  201.trg  211.trg  22.trg  220.trg  234.trg  235.trg  236.trg  237.trg  238.trg  239.trg  241.trg  243.trg  (+78 more)
lib/world/wld/: 0.wld  1.toml  1.wld  100.wld  101.wld  103.wld  104.wld  106.wld  107.wld  11.wld  115.wld  117.wld  118.wld  12.wld  120.wld  125.wld  13.wld  130.wld  14.wld  140.wld  15.wld  150.wld  16.wld  169.wld  17.wld  175.wld  18.wld  186.wld  187.wld  19.wld  2.wld  20.wld  200.wld  201.wld  211.wld  22.wld  220.wld  232.wld  233.wld  234.wld  (+152 more)
lib/world/zon/: 0.zon  1.zon  100.zon  101.zon  103.zon  104.zon  106.zon  107.zon  11.zon  115.zon  117.zon  118.zon  12.zon  120.zon  125.zon  13.zon  130.zon  14.zon  140.zon  15.zon  150.zon  16.zon  169.zon  17.zon  175.zon  18.zon  186.zon  187.zon  19.zon  2.zon  20.zon  200.zon  201.zon  211.zon  22.zon  220.zon  232.zon  233.zon  234.zon  235.zon  (+152 more)
log/: README
src/: CMakeLists.txt  Makefile  Makefile.amiga  Makefile.arc  Makefile.bcc  Makefile.bcc55  Makefile.in  Makefile.lcc  Makefile.macOS  Makefile.msvc  Makefile.os2  SCOPTIONS  Smakefile  act.comm.c  act.h  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.social.c  act.wizard.c  aedit.c  alias.c  asciimap.c  asciimap.h  ban.c  ban.h  boards.c  boards.h  bsd-snprintf.c  bsd-snprintf.h  build_circlemud.com  castle.c  cedit.c  class.c  class.h  comm.c  comm.h  conf.h  (+148 more)
src/test/: Makefile  README.md  test.act.item.c  test.act.item.h  test.example.c  test.example.h  test.fixtures.c  test.fixtures.h  test.handler.c  test.handler.h  test_handler.c  testrunner.c  testrunner.h
src/util/: CMakeLists.txt  Makefile  Makefile.in  asciipasswd.c  autowiz.c  listrent.c  plrtoascii.c  rebuildAsciiIndex.c  rebuildMailIndex.c  scheck  shopconv.c  sign.c  split.c  webster.c  wld2html.c
tests/: CMakeLists.txt  Makefile  Makefile.in  fuzz_interpreter.c  fuzz_random.c  fuzz_utils.c  test_class  test_class.c  test_interpreter  test_interpreter.c  test_random  test_random.c  test_stubs.c  test_utils  test_utils.c  unity_to_junit.py
